# mind-verse

./: .gitignore  README.md  docker-compose.yaml
csv_quotes_import/: .env  Cargo.toml
csv_quotes_import/src/: main.rs
nest_js_gateway/: docker-compose.yml  package-lock.json  package.json  tsconfig.json
nest_js_gateway/prisma/: schema.prisma  schema.quotes.prisma  seed.ts
nest_js_gateway/src/: app.module.ts
nest_js_gateway/src/application/commands/auth/: login.command.ts  send-verification-email.command.ts
nest_js_gateway/src/application/dtos/quote/: emotion-state.dto.ts  journal-entry.dto.ts
nest_js_gateway/src/application/queries/quote/: get-relevant-quote.query.ts
nest_js_gateway/src/core/repositories/: quotes.repository.interface.ts
nest_js_gateway/src/core/services/: auth.service.ts  emotions.service.ts  quotes.service.ts  user.service.spec.ts
nest_js_gateway/src/infrastructure/repositories/: email-verification.repository.ts  otp.repository.ts  password-reset.repository.ts  permission.repository.ts  quotes.repository.ts  refresh-token.repository.ts  role.repository.ts  user.repository.ts
nest_js_gateway/src/shared/constants/: tokens.ts
quotes_processing/: Cargo.toml
quotes_processing/src/: main.rs
react_native_frontend/: package-lock.json  package.json
react_native_frontend_2/mind-verse-app/: app.json  package.json
react_native_frontend_2/mind-verse-app/app/(tabs)/: index.tsx
sentiment_analyzer/: Cargo.toml
sentiment_analyzer/src/: main.rs
sentiment_analyzer_python/: Dockerfile
sentiment_analyzer_python/app/: main.py
(+5 files in other folders)
